--- a/Runly/Runly.Android/Properties/AndroidManifest.xml
+++ b/Runly/Runly.Android/Properties/AndroidManifest.xml
@@ -12,4 +12,6 @@
 	<uses-feature android:name="android.hardware.location" android:required="false" />
 	<uses-feature android:name="android.hardware.location.gps" android:required="false" />
 	<uses-feature android:name="android.hardware.location.network" android:required="false" />
+	<uses-feature android:name="android.hardware.sensor.stepcounter" />
+	<uses-feature android:name="android.hardware.sensor.stepdetector" />
 </manifest>
