--- a/Runly/Runly/Runly.csproj
+++ b/Runly/Runly/Runly.csproj
@@ -24,6 +24,9 @@
     <EmbeddedResource Update="Pages\Settings.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Pages\StatisticsView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Pages\StepCounter.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
